// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> mount renderig matches the snapshots 1`] = `
<App>
  <div
    className="App"
  >
    <header
      className="App-header"
    >
      <h1
        className="App-title"
      >
        Welcome to React
      </h1>
      <h3
        className="blue"
      >
        Hello!
      </h3>
    </header>
    <ul>
      <li>
        h
      </li>
      <li>
        h
      </li>
      <li>
        h
      </li>
    </ul>
    <p
      className="App-intro"
    >
      To get started, edit 
      <code>
        src/App.js
      </code>
       and save to reload.
    </p>
    <p
      className="button-state"
    >
      !No
    </p>
    <button
      onClick={[Function]}
    >
      Click
    </button>
    <title
      text="some string"
    />
    <h2 />
    <input
      onChange={[Function]}
      type="text"
    />
    <p
      className="lifeCycle"
    >
      componentDidMount
    </p>
  </div>
</App>
`;

exports[`<App /> shallow renderig matches the snapshots 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <h1
      className="App-title"
    >
      Welcome to React
    </h1>
    <h3
      className="blue"
    >
      Hello!
    </h3>
  </header>
  <ul>
    <li>
      h
    </li>
    <li>
      h
    </li>
    <li>
      h
    </li>
  </ul>
  <p
    className="App-intro"
  >
    To get started, edit 
    <code>
      src/App.js
    </code>
     and save to reload.
  </p>
  <p
    className="button-state"
  >
    !No
  </p>
  <button
    onClick={[Function]}
  >
    Click
  </button>
  <title
    text="some string"
  />
  <h2 />
  <input
    onChange={[Function]}
    type="text"
  />
  <p
    className="lifeCycle"
  >
    componentDidMount
  </p>
</div>
`;
